fix cloudinary and keycloak-listener